fix(editor): post ID input is not visible

--- a/scss/editor/_client-post.scss
+++ b/scss/editor/_client-post.scss
@@ -4,28 +4,35 @@
 }
 
 .tablopost .herocaption {
+  position: absolute;
   left: 0.5rem !important;
   bottom: 0.5rem !important;
   right: 0.5rem !important;
-}
 
-.tablopost h3 {
-  margin: 0 !important;
+  h3 {
+    margin: 0 !important;
+    font-size: 20px !important;
+  }
+
+  .tag {
+    display: none;
+  }
+
+  .subline {
+    font-size: 15px;
+
+    input {
+      font-size: 10px;
+      height: 20px;
+      min-height: 20px;
+      width: 50px;
+      min-width: 50px;
+    }
+  }
 }
 
 .tablopost img {
   height: 100% !important;
-}
-
-.tablopost .subline input {
-  font-size: 10px;
-  height: 20px;
-  min-height: 20px;
-  width: 50px;
-  min-width: 50px;
-}
-
-.tablopost img {
   position: absolute;
   width: 100%;
   height: 100%;
